--- a/.github/workflows/gist_sync.yml
+++ b/.github/workflows/gist_sync.yml
@@ -67,16 +67,22 @@ jobs:
           done
           echo "deleted=$deleted" >> $GITHUB_OUTPUT
 
+
       - name: Commit and Push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add SCRIPTS-BACKUP
           git commit -m "🔄 脚本更新：新增 ${{ steps.download.outputs.added }} 个，修改 ${{ steps.download.outputs.changed }} 个，删除 ${{ steps.cleanup.outputs.deleted }} 个" || echo "✅ 无更新"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
 
-
-      - name: Send Notifications
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add SCRIPTS-BACKUP
+          git commit -m "🔄 脚本更新：新增 ${{ steps.download.outputs.added }} 个，修改 ${{ steps.download.outputs.changed }} 个，删除 ${{ steps.cleanup.outputs.deleted }} 个" || echo "✅ 无更新"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+- name: Send Notifications
         run: |
           lang="${{ secrets.NOTIFY_LANG }}"
           if [ "$lang" = "zh" ]; then
