--- a/.github/workflows/gist_sync.yml
+++ b/.github/workflows/gist_sync.yml
@@ -7,12 +7,12 @@ on:
 
 env:
   CLEAN_MODE: true
+  NOTIFY_LANG: en  # 修改这里切换语言（zh = 中文，en = English）
   BARK_PUSH_URL: ${{ secrets.BARK_PUSH_URL }}
   SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
   WECHAT_WEBHOOK_URL: ${{ secrets.WECHAT_WEBHOOK_URL }}
   TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
   TG_USER_ID: ${{ secrets.TG_USER_ID }}
-  NOTIFY_LANG: ${{ secrets.NOTIFY_LANG }}
 
 jobs:
   sync:
@@ -35,61 +35,96 @@ jobs:
       - name: Create backup directory
         run: mkdir -p SCRIPTS-BACKUP
 
-      - name: Load JSON and Download Scripts
+      - name: Load JSON and Sync Scripts
         id: download
         run: |
-          changed=0
           added=0
+          changed=0
+          touch update_list.txt
+
           jq -r 'to_entries[] | "\(.key) \(.value)"' script-gist.json > entries.txt
 
           while read name url; do
-            file="SCRIPTS-BACKUP/${name}.js"
+            filename="SCRIPTS-BACKUP/${name}.js"
             tmpfile=$(mktemp)
             curl -sL "$url" -o "$tmpfile"
-            if [[ -f "$file" ]]; then
-              if ! cmp -s "$file" "$tmpfile"; then
-                mv "$tmpfile" "$file"
+            if [[ -f "$filename" ]]; then
+              if ! cmp -s "$filename" "$tmpfile"; then
+                mv "$tmpfile" "$filename"
+                echo "$filename" >> update_list.txt
                 changed=$((changed + 1))
               else
                 rm "$tmpfile"
               fi
             else
-              mv "$tmpfile" "$file"
+              mv "$tmpfile" "$filename"
+              echo "$filename" >> update_list.txt
               added=$((added + 1))
             fi
           done < entries.txt
 
-          echo "changed=$changed" >> $GITHUB_OUTPUT
           echo "added=$added" >> $GITHUB_OUTPUT
+          echo "changed=$changed" >> $GITHUB_OUTPUT
 
       - name: Cleanup unreferenced files
         if: env.CLEAN_MODE == 'true'
         id: cleanup
         run: |
           deleted=0
+          touch delete_list.txt
           jq -r 'keys[]' script-gist.json | sed 's/.*/SCRIPTS-BACKUP\/&.js/' > keep_list.txt
           for f in SCRIPTS-BACKUP/*.js; do
-            grep -Fxq "$f" keep_list.txt || { rm "$f"; deleted=$((deleted + 1)); }
+            grep -Fxq "$f" keep_list.txt || {
+              echo "$f" >> delete_list.txt
+              rm "$f"
+              deleted=$((deleted + 1))
+            }
           done
           echo "deleted=$deleted" >> $GITHUB_OUTPUT
 
-      - name: Commit and Push changes
+      - name: Commit updated files
+        if: steps.download.outputs.added != '0' || steps.download.outputs.changed != '0'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add SCRIPTS-BACKUP
-          git commit -m "🔄 脚本更新：新增 ${{ steps.download.outputs.added }} 个，修改 ${{ steps.download.outputs.changed }} 个，删除 ${{ steps.cleanup.outputs.deleted }} 个" || echo "✅ 无更新"
+          while read filepath; do
+            git add "$filepath"
+            fname=$(basename "$filepath")
+            git commit -m "sync: $fname"
+          done < update_list.txt
+
+      - name: Commit deleted files
+        if: steps.cleanup.outputs.deleted != '0'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          while read filepath; do
+            git rm "$filepath"
+            fname=$(basename "$filepath")
+            git commit -m "sync: removed $fname"
+          done < delete_list.txt
+
+      - name: Push to GitHub
+        if: steps.download.outputs.added != '0' || steps.download.outputs.changed != '0' || steps.cleanup.outputs.deleted != '0'
+        run: |
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
 
       - name: Send Notifications
         run: |
-          lang="$NOTIFY_LANG"
+          lang="${NOTIFY_LANG:-en}"
+          a="${{ steps.download.outputs.added }}"
+          c="${{ steps.download.outputs.changed }}"
+          d="${{ steps.cleanup.outputs.deleted }}"
+          a="${a:-0}"
+          c="${c:-0}"
+          d="${d:-0}"
+
           if [ "$lang" = "zh" ]; then
             title="📦 Gist 自动备份完成"
-            content="🆕 新增: ${{ steps.download.outputs.added }} 个\n📝 修改: ${{ steps.download.outputs.changed }} 个\n🗑️ 删除: ${{ steps.cleanup.outputs.deleted }} 个\n🕒 $(date '+%F %T')"
+            content="🆕 新增: $a 个\n📝 修改: $c 个\n🗑️ 删除: $d 个\n🕒 $(date '+%F %T')"
           else
             title="📦 Gist Backup Completed"
-            content="🆕 Added: ${{ steps.download.outputs.added }}\n📝 Updated: ${{ steps.download.outputs.changed }}\n🗑️ Deleted: ${{ steps.cleanup.outputs.deleted }}\n🕒 $(date '+%F %T')"
+            content="🆕 Added: $a\n📝 Updated: $c\n🗑️ Deleted: $d\n🕒 $(date '+%F %T')"
           fi
 
           if [ -n "$BARK_PUSH_URL" ]; then
