--- a/.github/workflows/gist_sync.yml
+++ b/.github/workflows/gist_sync.yml
@@ -7,7 +7,8 @@ on:
 
 env:
   CLEAN_MODE: true
-  NOTIFY_LANG: en  # 修改这里切换语言（zh = 中文，en = English）
+  NOTIFY_LANG: en  # 设置为 zh 可切换中文
+  FORCE_NOTIFY: true  # 即使没有变化也推送通知
   BARK_PUSH_URL: ${{ secrets.BARK_PUSH_URL }}
   SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
   WECHAT_WEBHOOK_URL: ${{ secrets.WECHAT_WEBHOOK_URL }}
@@ -22,8 +23,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install jq
-        run: sudo apt-get install -y jq
+      - name: Install jq and Python
+        run: sudo apt-get install -y jq python3
 
       - name: Verify script-gist.json exists
         run: |
@@ -110,7 +111,12 @@ jobs:
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
 
       - name: Send Notifications
+        if: env.FORCE_NOTIFY == 'true' || steps.download.outputs.added != '0' || steps.download.outputs.changed != '0' || steps.cleanup.outputs.deleted != '0'
         run: |
+          urlencode() {
+            python3 -c "import urllib.parse, sys; print(urllib.parse.quote(sys.argv[1]))" "$1"
+          }
+
           lang="${NOTIFY_LANG:-en}"
           a="${{ steps.download.outputs.added }}"
           c="${{ steps.download.outputs.changed }}"
@@ -127,24 +133,27 @@ jobs:
             content="🆕 Added: $a\n📝 Updated: $c\n🗑️ Deleted: $d\n🕒 $(date '+%F %T')"
           fi
 
+          etitle=$(urlencode "$title")
+          econtent=$(urlencode "$content")
+
           if [ -n "$BARK_PUSH_URL" ]; then
-            curl -s "${BARK_PUSH_URL}/${title}/${content}"
+            curl -s "${BARK_PUSH_URL}/${etitle}/${econtent}" || true
           fi
 
           if [ -n "$SERVERCHAN_SEND_KEY" ]; then
             curl -s -X POST https://sctapi.ftqq.com/${SERVERCHAN_SEND_KEY}.send \
-              -d "title=${title}" -d "desp=${content}"
+              -d "title=${title}" -d "desp=${content}" || true
           fi
 
           if [ -n "$WECHAT_WEBHOOK_URL" ]; then
             curl -s -H 'Content-Type: application/json' -d "{
               \"msgtype\": \"text\",
               \"text\": { \"content\": \"${title}\\n${content}\" }
-            }" "$WECHAT_WEBHOOK_URL"
+            }" "$WECHAT_WEBHOOK_URL" || true
           fi
 
           if [ -n "$TG_BOT_TOKEN" ] && [ -n "$TG_USER_ID" ]; then
             curl -s -X POST https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage \
               -d chat_id="${TG_USER_ID}" \
-              -d text="${title}\n${content}"
+              -d text="${title}\n${content}" || true
           fi
