--- a/.github/workflows/gist_sync.yml
+++ b/.github/workflows/gist_sync.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Set up Git user
         run: |
-          git config --global user.email "your-email"
-          git config --global user.name "your-username"          
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"        
 
       - name: Run sync_and_notify.py
         run: python3 sync_and_notify.py
