--- a/.github/workflows/sync-and-convert-local.yml
+++ b/.github/workflows/sync-and-convert-local.yml
@@ -1,5 +1,3 @@
-# 文件路径：.github/workflows/sync-and-convert-local.yml
-
 name: "Sync + 本地化 Script-Hub 转换（无须自建服务器）"
 
 on:
@@ -10,7 +8,7 @@ on:
     paths:
       - 'script-hub-list.json'
       - '.github/scripts/convert_hub_local.py'
-      - '.github/scripts/sync-hub.py'   # 如需同步其它脚本，可放行此项
+      - '.github/scripts/sync-hub.py'   # 如需同步其它脚本，可保留此项；否则可删除
 
 jobs:
   sync_and_convert:
@@ -20,12 +18,12 @@ jobs:
       # 本地 Script-Hub 服务地址
       SCRIPT_HUB_API_BASE: "http://127.0.0.1:9100"
       # 如果 JSON 中写的是相对路径，需要提供 GitHub Raw 前缀
-      # 请在 Repository Settings → Secrets ← 添加一个 GITHUB_RAW_BASE
+      # 请在 Repository Settings → Secrets → 添加一个 GITHUB_RAW_BASE
       GITHUB_RAW_BASE: ${{ secrets.GITHUB_RAW_BASE }}
       # CLEAN_MODE 设为 "true" 会自动删除 OUTPUT_DIR 中 JSON 列表以外的旧文件
       CLEAN_MODE: "true"
 
-      # 如果你想保留 sync-hub.py 中的通知逻辑，可将：
+      # 如果你想让 sync-hub.py 里发通知，就也把下面这些 Secret 一并设置好
       BARK_PUSH_URL: ${{ secrets.BARK_PUSH_URL }}
       SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
       WECHAT_WEBHOOK_URL: ${{ secrets.WECHAT_WEBHOOK_URL }}
@@ -37,14 +35,14 @@ jobs:
 
     steps:
       # -------------------------------------------------------------------
-      # 1. Checkout：拉取仓库并保留凭据，以便后续 git push
+      # 1. Checkout：拉取仓库并保留凭据，以便后续 git push 能使用 GITHUB_TOKEN
       - name: Checkout 仓库
         uses: actions/checkout@v3
         with:
           persist-credentials: true
 
       # -------------------------------------------------------------------
-      # 2. 安装 Node.js（Script-Hub 后端需要 ≥18.12）
+      # 2. 安装 Node.js（需要 ≥18.12，以兼容 pnpm@10）
       - name: Setup Node.js 18
         uses: actions/setup-node@v3
         with:
@@ -61,13 +59,13 @@ jobs:
           fi
 
       # -------------------------------------------------------------------
-      # 4. 进入后端目录并安装依赖、编译
-      - name: 安装 & 编译 Script-Hub 后端
+      # 4. 进入后端目录并安装依赖（不做 build）
+      - name: 安装 Script-Hub 后端依赖
         run: |
           cd .github/scripts/script-hub-backend
-          npm install -g pnpm        # 安装 pnpm（若 Runner 上未预装）
-          pnpm install               # 安装依赖
-          pnpm run build             # 编译
+          npm install -g pnpm        # 安装 pnpm，如果 Runner 未预装
+          pnpm install               # 安装 package.json 中声明的依赖
+          # 不要执行 pnpm run build，因为没有 build 脚本
 
       # -------------------------------------------------------------------
       # 5. 后台启动本地 Script-Hub 服务 (监听 9100)
@@ -75,7 +73,7 @@ jobs:
         run: |
           cd .github/scripts/script-hub-backend
           nohup pnpm start --port=9100 >/dev/null 2>&1 &
-          sleep 5   # 等待后端完全启动
+          sleep 5   # 给后端 5 秒钟时间完全启动
 
       # -------------------------------------------------------------------
       # 6. 安装 Python，用于执行转换脚本
@@ -93,7 +91,7 @@ jobs:
 
       # -------------------------------------------------------------------
       # 8. （可选）运行 sync-hub.py 同步其它脚本到本地
-      #    如不需要，请注释或删除下面三行
+      #    如果不需要，注释或删除以下三行即可
       - name: 运行 sync-hub.py（可选同步步骤）
         run: |
           python .github/scripts/sync-hub.py
@@ -105,7 +103,7 @@ jobs:
           python .github/scripts/convert_hub_local.py
 
       # -------------------------------------------------------------------
-      # 10. （可选）检查输出目录结构
+      # 10. （可选）检查输出目录结构，便于在 Actions 日志中查看
       - name: 打印 SCRIPT-HUB-OUTPUT 目录
         run: |
           echo "---- SCRIPT-HUB-OUTPUT 目录 ----"
