--- a/.github/workflows/sync-and-convert-local.yml
+++ b/.github/workflows/sync-and-convert-local.yml
@@ -1,3 +1,5 @@
+# 文件路径：.github/workflows/sync-and-convert-local.yml
+
 name: "Sync + 本地化 Script-Hub 转换（无须自建服务器）"
 
 on:
@@ -42,14 +44,21 @@ jobs:
           persist-credentials: true
 
       # -------------------------------------------------------------------
-      # 2. 安装 Node.js（需要 ≥18.12，以兼容 pnpm@10）
+      # 2. 配置 Git 身份，避免 “Please tell me who you are” 错误
+      - name: 配置 Git 用户信息
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      # -------------------------------------------------------------------
+      # 3. 安装 Node.js（需要 ≥18.12，以兼容 pnpm@10）
       - name: Setup Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: "18"
 
       # -------------------------------------------------------------------
-      # 3. Clone 或更新 Script-Hub 后端仓库
+      # 4. Clone 或更新 Script-Hub 后端仓库
       - name: 拉取 Script-Hub 后端源码
         run: |
           if [ ! -d ".github/scripts/script-hub-backend" ]; then
@@ -59,7 +68,7 @@ jobs:
           fi
 
       # -------------------------------------------------------------------
-      # 4. 进入后端目录并安装依赖（不做 build）
+      # 5. 进入后端目录并安装依赖（不做 build）
       - name: 安装 Script-Hub 后端依赖
         run: |
           cd .github/scripts/script-hub-backend
@@ -68,7 +77,7 @@ jobs:
           # 不要执行 pnpm run build，因为没有 build 脚本
 
       # -------------------------------------------------------------------
-      # 5. 后台启动本地 Script-Hub 服务 (监听 9100)
+      # 6. 后台启动本地 Script-Hub 服务 (监听 9100)
       - name: 启动 Script-Hub 后端 (后台运行)
         run: |
           cd .github/scripts/script-hub-backend
@@ -76,34 +85,34 @@ jobs:
           sleep 5   # 给后端 5 秒钟时间完全启动
 
       # -------------------------------------------------------------------
-      # 6. 安装 Python，用于执行转换脚本
+      # 7. 安装 Python，用于执行转换脚本
       - name: Setup Python 3.9
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
       # -------------------------------------------------------------------
-      # 7. 安装 Python 依赖 requests
+      # 8. 安装 Python 依赖 requests
       - name: 安装 Python 依赖
         run: |
           python -m pip install --upgrade pip
           pip install requests
 
       # -------------------------------------------------------------------
-      # 8. （可选）运行 sync-hub.py 同步其它脚本到本地
-      #    如果不需要，注释或删除以下三行即可
+      # 9. （可选）运行 sync-hub.py 同步其它脚本到本地
+      #    如不需要，注释或删除以下三行即可
       - name: 运行 sync-hub.py（可选同步步骤）
         run: |
-         python .github/scripts/sync-hub.py
+          python .github/scripts/sync-hub.py
 
       # -------------------------------------------------------------------
-      # 9. 运行本地化转换脚本：convert_hub_local.py
+      # 10. 运行本地化转换脚本：convert_hub_local.py
       - name: 从 JSON 转换并推送
         run: |
           python .github/scripts/convert_hub_local.py
 
       # -------------------------------------------------------------------
-      # 10. （可选）检查输出目录结构，便于在 Actions 日志中查看
+      # 11. （可选）检查输出目录结构，便于在 Actions 日志中查看
       - name: 打印 SCRIPT-HUB-OUTPUT 目录
         run: |
           echo "---- SCRIPT-HUB-OUTPUT 目录 ----"
