--- a/.github/workflows/sync-and-convert-local.yml
+++ b/.github/workflows/sync-and-convert-local.yml
@@ -1,5 +1,3 @@
-# 文件路径：.github/workflows/sync-and-convert-local.yml
-
 name: "Sync + 本地化 Script-Hub 转换（无须自建服务器）"
 
 on:
@@ -44,7 +42,7 @@ jobs:
           persist-credentials: true
 
       # -------------------------------------------------------------------
-      # 2. 配置 Git 身份，避免 “Please tell me who you are” 错误
+      # 2. 配置 Git 用户信息，避免 “Please tell me who you are” 错误
       - name: 配置 Git 用户信息
         run: |
           git config user.name "github-actions[bot]"
@@ -68,51 +66,45 @@ jobs:
           fi
 
       # -------------------------------------------------------------------
-      # 5. 进入后端目录并安装依赖（不做 build）
-      - name: 安装 Script-Hub 后端依赖
+      # 5. 进入后端目录并安装依赖，然后用 npx 启动服务
+      - name: 安装 & 启动 Script-Hub 后端
         run: |
           cd .github/scripts/script-hub-backend
-          npm install -g pnpm        # 安装 pnpm，如果 Runner 未预装
-          pnpm install               # 安装 package.json 中声明的依赖
-          # 不要执行 pnpm run build，因为没有 build 脚本
+          npm install -g pnpm               # 安装 pnpm，如果 Runner 未预装
+          pnpm install                      # 安装后端依赖
+          # 用 npx script-hub 启动服务，并监听 9100 端口，放到后台
+          nohup npx script-hub --port 9100 >/dev/null 2>&1 &
+          sleep 5   # 等待 5 秒钟，让后端完全启动
 
       # -------------------------------------------------------------------
-      # 6. 后台启动本地 Script-Hub 服务 (监听 9100)
-      - name: 启动 Script-Hub 后端 (后台运行)
-        run: |
-          cd .github/scripts/script-hub-backend
-          nohup pnpm start --port=9100 >/dev/null 2>&1 &
-          sleep 5   # 给后端 5 秒钟时间完全启动
-
-      # -------------------------------------------------------------------
-      # 7. 安装 Python，用于执行转换脚本
+      # 6. 安装 Python，用于执行转换脚本
       - name: Setup Python 3.9
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
       # -------------------------------------------------------------------
-      # 8. 安装 Python 依赖 requests
+      # 7. 安装 Python 依赖 requests
       - name: 安装 Python 依赖
         run: |
           python -m pip install --upgrade pip
           pip install requests
 
       # -------------------------------------------------------------------
-      # 9. （可选）运行 sync-hub.py 同步其它脚本到本地
-      #    如不需要，注释或删除以下三行即可
+      # 8. （可选）运行 sync-hub.py 同步其它脚本到本地
+      #    如果不需要，注释或删除以下三行即可
       - name: 运行 sync-hub.py（可选同步步骤）
         run: |
           python .github/scripts/sync-hub.py
 
       # -------------------------------------------------------------------
-      # 10. 运行本地化转换脚本：convert_hub_local.py
+      # 9. 运行本地化转换脚本：convert_hub_local.py
       - name: 从 JSON 转换并推送
         run: |
           python .github/scripts/convert_hub_local.py
 
       # -------------------------------------------------------------------
-      # 11. （可选）检查输出目录结构，便于在 Actions 日志中查看
+      # 10. （可选）检查输出目录结构，便于在 Actions 日志中查看
       - name: 打印 SCRIPT-HUB-OUTPUT 目录
         run: |
           echo "---- SCRIPT-HUB-OUTPUT 目录 ----"
